prevent body scrolling on mobile

--- a/source/main.scss
+++ b/source/main.scss
@@ -8,6 +8,7 @@
 body {
 	font: 10pt sans-serif;
 	margin: 0;
+	overflow: hidden;
 }
 
 $green: rgb(7, 141,  62);
